<resources>
    <string name="app_name">Petopia</string>
    <string name="menu_home">Home</string>
    <string name="menu_search">Search</string>
    <string name="menu_nearby">Nearby</string>
    <string name="menu_map">Map</string>
    <string name="menu_profile">Profile</string>
    <string name="title_activity_register">RegisterActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="search">검색</string>
    <string name="search_hint">키워드를 입력해주세요.</string>
    <string name="keyword_region">지역</string>
    <string name="keyword_outdoor">공간</string>
    <string name="keyword_weight">몸무게</string>
    <string name="recommendation_title">추천 장소</string>
    <string name="filter_all">전체</string>
    <string name="filter_korean">한식</string>
    <string name="filter_chinese">중식</string>
    <string name="filter_japanese">일식</string>
    <string name="filter_cafe">카페</string>
    <string name="filter_western">양식</string>
    <string name="filter_pub">주점</string>

</resources>